# mini-me

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  bottom_anchor.rs  classic.rs  debug.rs  fancy.rs  gutter.rs  gutter_chevron.rs  gutter_dynamic.rs  gutter_lazy.rs  locked.rs
lib/: .gitignore  Cargo.toml
lib/examples/: classic.rs  fancy.rs  locked.rs
lib/src/: error.rs  util.rs
lib/src/editor/: cursor.rs  keybindings.rs  mod.rs
lib/src/renderer/: full.rs  mod.rs
lib/src/renderer/styles/: mod.rs
src/: common_term.rs  editor.rs  error.rs  ext.rs  keybindings.rs  lib.rs  main.rs  renderer.rs  term.rs  util.rs  windows_term.rs
src/console_patch/: common_term.rs  mod.rs  unix_term.rs  windows_term.rs
src/editor/: cursor.rs  keybindings.rs  mod.rs  selection.rs
src/renderer/: data.rs  footer.rs  full.rs  header.rs  lazy.rs  margin.rs  mod.rs
src/renderer/styles/: classic.rs  fancy.rs  mod.rs
