[package]
name = "mini_me"
version = "0.1.0"
authors = ["Avarel <avarelpm@gmail.com>"]
repository = "https://github.com/Avarel/multiline-console"
homepage = "https://github.com/Avarel/multiline-console"
description = "A multiline console prompt for Rust."
edition = "2018"
license = "MIT"
readme = "README.md"

[lib]
name = "mini_me"
edition = "2018"

[dependencies]
crossterm = "0.19"
ropey = "1.2"
thiserror = "1.0"